--- a/index.html
+++ b/index.html
@@ -42,6 +42,44 @@
                     </div>
                     <input type="button" value="Explore Now">
                 </div>
+                <div class="travel_bx">
+                    <h4>Countries To Travel</h4>
+                    <div class="cards">
+                        <div class="card">
+                            <h3>India <img src="icon/india.png" alt=""></h3>
+                            <img src="img/Mumbai-India-at-night.jpg" alt="">
+                            <div class="btn_city">
+                                <a href="">Read Now</a>
+                                <h5>Mumbai Central <br> <span>$460</span></h5>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <h3>United State <img src="icon/united-states.png" alt=""></h3>
+                            <img src="img/newyork.webp" alt="">
+                            <div class="btn_city">
+                                <a href="">Read Now</a>
+                                <h5>NewYork <br> <span>$870</span></h5>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <h3>Russia <img src="icon/russia.png" alt=""></h3>
+                            <img src="img/sanpitersburg.jpg" alt="">
+                            <div class="btn_city">
+                                <a href="">Read Now</a>
+                                <h5>Sanpitersburg <br> <span>$660</span></h5>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <h3>Spain <img src="icon/spain.png" alt=""></h3>
+                            <img src="img/barcelona.jpg" alt="">
+                            <div class="btn_city">
+                                <a href="">Read Now</a>
+                                <h5>Barcelona <br> <span>$730</span></h5>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </header>
