--- a/index.html
+++ b/index.html
@@ -83,6 +83,100 @@
             </div>
         </div>
     </header>
+    <div class="offers">
+        <h1>Best Tour Package Offers For You</h1>
+        <p>Choose your next destination</p>
+        <div class="cards">
+            <div class="card">
+                <h3>Lotus-Delhi</h3>
+                <div class="img_text">
+                    <img src="img/lotus_temple.jpg" alt="">
+                    <h4>Included: Air ticket, Hotel, Breakfast, Tours, Airport Transportation</h4>
+                </div>
+                <div class="cont_bx">
+                    <div class="price">
+                        <div class="heart_chat">
+                            <i class="bi bi-heart-fill"><span>86412</span></i>
+                            <i class="bi bi-chat-fill"><span>4582</span></i>
+                        </div>
+                        <div class="info_price">
+                            <a href="">More Info</a>
+                            <h4>$2648</h4>
+                        </div>
+                    </div>
+                    <div class="days">
+                        5 Days <br> India
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <h3>Burj Khalifa-DXB</h3>
+                <div class="img_text">
+                    <img src="img/burjkhlifa.jpg" alt="">
+                    <h4>Included: Air ticket, Hotel, Breakfast, Tours, Airport Transportation</h4>
+                </div>
+                <div class="cont_bx">
+                    <div class="price">
+                        <div class="heart_chat">
+                            <i class="bi bi-heart-fill"><span>92500</span></i>
+                            <i class="bi bi-chat-fill"><span>4600</span></i>
+                        </div>
+                        <div class="info_price">
+                            <a href="">More Info</a>
+                            <h4>$5000</h4>
+                        </div>
+                    </div>
+                    <div class="days">
+                        4 Days <br> Dubai
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <h3>Piramids-Egypt</h3>
+                <div class="img_text">
+                    <img src="img/piramids.jpg" alt="">
+                    <h4>Included: Air ticket, Hotel, Breakfast, Tours, Airport Transportation</h4>
+                </div>
+                <div class="cont_bx">
+                    <div class="price">
+                        <div class="heart_chat">
+                            <i class="bi bi-heart-fill"><span>86412</span></i>
+                            <i class="bi bi-chat-fill"><span>4582</span></i>
+                        </div>
+                        <div class="info_price">
+                            <a href="">More Info</a>
+                            <h4>$4609</h4>
+                        </div>
+                    </div>
+                    <div class="days">
+                        7 Days <br> Egypt
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <h3>Mountain-Vietnam</h3>
+                <div class="img_text">
+                    <img src="img/mountain.jpg" alt="">
+                    <h4>Included: Air ticket, Hotel, Breakfast, Tours, Airport Transportation</h4>
+                </div>
+                <div class="cont_bx">
+                    <div class="price">
+                        <div class="heart_chat">
+                            <i class="bi bi-heart-fill"><span>82950</span></i>
+                            <i class="bi bi-chat-fill"><span>4369</span></i>
+                        </div>
+                        <div class="info_price">
+                            <a href="">More Info</a>
+                            <h4>$3600</h4>
+                        </div>
+                    </div>
+                    <div class="days">
+                        7 Days <br> VN
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
